# DES

./: DES_RUN_GUID.md  Dockerfile  Dockerfile.packer  LICENSE  README.md  ROADMAP.md  Storage Efficiency Guide for DES  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
demo/: .env.example  Makefile.demo  QUICK_REFERENCE.md  README.md  docker-compose.demo.yml  index.html  init-db.sql  main.py  start-demo.sh  test-api.sh
demo/business-system/: Dockerfile  main.py  requirements.txt
demo/mnt/user-data/outputs/demo/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EXTENDED_RETENTION.md  FORMAT.md  MIGRATION.md  S3_SOURCE_GUIDE.md
example_data/: README.md
example_data/input/: README.md
example_data/manifests/: README.md
example_data/output/: README.md
examples/: COMPARISON_PER_RECORD_VS_WATERMARK.md  README_WATERMARK.md  WATERMARK_FAQ.md  WATERMARK_MIGRATION_GUIDE.md  alerts-des-migration.yml  demo_comparison.py  des_watermark_migrate.py  grafana-dashboard-des-migration.json  migration-config.json  migration-config.yaml  watermark_orchestrator.py
grafana/dashboards/: des-tombstone-management.json  des-tombstone-simple.yaml
k8s/: des-http-deployment.yaml  des-http-service.yaml  des-migrator-configmap.yaml  des-migrator-cronjob.yaml  des-migrator-pvc.yaml  des-migrator-rbac.yaml  des-migrator-secret.yaml  des-packer-cronjob.yaml  des-packer-job.yaml
prometheus/alerts/: des-tombstone-alerts.yaml
src/des_core/: __init__.py  archive_config.py  auth.py  bigfiles.py  cache.py  cli_auth.py  cli_meta.py  cli_migrator.py  cli_packer.py  cli_stats.py  compression.py  config.py  database_source.py  db_archive_marker.py  db_connector.py  ext_retention.py  http_retriever.py  metadata_manager.py  metrics.py  migration_orchestrator.py  multi_s3_retriever.py  packer.py  packer_planner.py  retriever.py  routing.py  s3_file_reader.py  s3_packer.py  s3_retriever.py  shard_io.py  shard_metadata.py  zone_config_loader.py
tests/: __init__.py  load_test_deletion.py  test_archive_config_repository.py  test_auth.py  test_auth_openbao.py  test_bigfiles.py  test_cli_auth.py  test_cli_meta.py  test_cli_migrator_args.py  test_cli_migrator_integration.py  test_cli_packer.py  test_cli_stats.py  test_database_source_provider.py  test_db_connector_integration.py  test_db_connector_statistics_integration.py  test_db_connector_statistics_perf.py  test_db_connector_statistics_unit.py  test_db_connector_unit.py  test_deletion_api.py  test_e2e_tombstone.py  test_ext_retention.py  test_http_retriever.py  test_http_retriever_backends.py  test_metadata_manager.py  test_metrics_integration.py  test_migration_orchestrator_integration.py  test_migration_orchestrator_unit.py  test_multi_s3_retriever.py  test_packer_integration.py  test_packer_planner.py  test_retriever_local.py  test_routing.py  test_s3_file_reader.py  test_s3_packer.py  test_s3_retriever.py  test_s3_retriever_cache.py  test_s3_retriever_ranges.py  test_s3_source_integration.py  test_shard_compression.py  test_shard_io.py  (+1 more)
