[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "des-core"
version = "0.1.0"
description = "Core routing utilities for Datavision Easy Store (DES)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "DES Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "boto3>=1.35.0",
  "zstandard>=0.23.0",
  "lz4>=4.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.8",
  "ruff>=0.6",
  "httpx>=0.27",
]

[project.scripts]
des-pack = "des_core.cli_packer:main"
des-http = "des_core.http_retriever:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
