[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "des-core"
version = "0.1.0"
description = "Core routing utilities for Datavision Easy Store (DES)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "DES Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "boto3>=1.35.0",
  "zstandard>=0.23.0",
  "lz4>=4.3.2",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
compression = [
  "zstandard>=0.23.0",
  "lz4>=4.3.2",
]
s3 = [
  "boto3>=1.35.0",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.6",
  "httpx>=0.27",
  "boto3-stubs[s3]>=1.35.0",
]

[project.scripts]
des-pack = "des_core.cli_packer:main"
des-http = "des_core.http_retriever:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict = false
mypy_path = ["src"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["zstandard", "lz4", "lz4.frame", "prometheus_client"]
ignore_missing_imports = true

[tool.ruff]
line-length = 130
target-version = "py311"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
