[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "des-core"
version = "0.1.0"
description = "Core routing utilities for Datavision Easy Store (DES)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "DES Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "boto3>=1.35.0",
  "zstandard>=0.23.0",
  "lz4>=4.3.2",
  "prometheus-client>=0.20.0",
  "tenacity>=8.2.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "psycopg2-binary>=2.9.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
compression = [
  "zstandard>=0.23.0",
  "lz4>=4.3.2",
]
s3 = [
  "boto3>=1.35.0",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "mypy>=1.8",
  "ruff>=0.6",
  "httpx>=0.27",
  "boto3-stubs[s3]>=1.35.0",
  "testcontainers[postgresql]>=4.9.0",
  "pytest-mock>=3.14.0",
  "types-PyYAML",
  "hypothesis>=6.112.0",
  "moto[s3]>=5.0.0",
]

[project.scripts]
des-pack = "des_core.cli_packer:main"
des-http = "des_core.http_retriever:app"
des-stats = "des_core.cli_stats:main"
des-migrate = "des_core.cli_migrator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: integration tests requiring external services",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
strict = false
mypy_path = ["src"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["zstandard", "lz4", "lz4.frame", "prometheus_client"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psycopg", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
